; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts1/extr_fts1.c_docListPhraseMerge.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts1/extr_fts1.c_docListPhraseMerge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @docListPhraseMerge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @docListPhraseMerge(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @readerInit(i32* %7, i32* %11)
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @readerInit(i32* %8, i32* %13)
  %15 = call i64 @nextDocid(i32* %7)
  store i64 %15, i64* %9, align 8
  %16 = call i64 @nextDocid(i32* %8)
  store i64 %16, i64* %10, align 8
  br label %17

17:                                               ; preds = %44, %3
  %18 = load i64, i64* %9, align 8
  %19 = icmp sgt i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i64, i64* %10, align 8
  %22 = icmp sgt i64 %21, 0
  br label %23

23:                                               ; preds = %20, %17
  %24 = phi i1 [ false, %17 ], [ %22, %20 ]
  br i1 %24, label %25, label %45

25:                                               ; preds = %23
  %26 = load i64, i64* %9, align 8
  %27 = load i64, i64* %10, align 8
  %28 = icmp slt i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %25
  %30 = call i64 @nextDocid(i32* %7)
  store i64 %30, i64* %9, align 8
  br label %44

31:                                               ; preds = %25
  %32 = load i64, i64* %10, align 8
  %33 = load i64, i64* %9, align 8
  %34 = icmp slt i64 %32, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %31
  %36 = call i64 @nextDocid(i32* %8)
  store i64 %36, i64* %10, align 8
  br label %43

37:                                               ; preds = %31
  %38 = load i64, i64* %9, align 8
  %39 = load i32*, i32** %6, align 8
  %40 = call i32 @mergePosList(i32* %7, i32* %8, i64 %38, i32* %39)
  %41 = call i64 @nextDocid(i32* %7)
  store i64 %41, i64* %9, align 8
  %42 = call i64 @nextDocid(i32* %8)
  store i64 %42, i64* %10, align 8
  br label %43

43:                                               ; preds = %37, %35
  br label %44

44:                                               ; preds = %43, %29
  br label %17

45:                                               ; preds = %23
  ret void
}

declare dso_local i32 @readerInit(i32*, i32*) #1

declare dso_local i64 @nextDocid(i32*) #1

declare dso_local i32 @mergePosList(i32*, i32*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
